--- a/scss/other/_mixins.scss
+++ b/scss/other/_mixins.scss
@@ -20,7 +20,7 @@
 @mixin btn__cv {
     display: inline-block;
     height: 40px;
-    width: 27%;
+    padding: 0 15px;
     font-size: 15px;
     text-transform: uppercase;
     text-align: center;
@@ -30,5 +30,15 @@
     text-decoration: none;
     color: #fff;
 }
+
+@mixin flexbox {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+
 
 
