--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -30,6 +30,7 @@ Navigation
                     text-transform: uppercase; 
                     letter-spacing: 1px;
                     transition: all 0.5s linear;
+                    font-weight: bold;
                     
                     &:hover {
                         transform: scale(1.1);
