--- a/css/style.css
+++ b/css/style.css
@@ -428,114 +428,58 @@ Section "Contact"
 */
 #contact {
   color: #010d23;
-  display: flex;
-  flex-wrap: wrap;
   width: 100%;
   height: 100%;
   overflow: hidden;
   position: relative;
   background: url("../img/contact/contact-bg.jpeg");
   background-size: cover;
-  background-position: center; }
-  #contact .contact__left-section {
-    width: 50%; }
-    #contact .contact__left-section .contact__title {
-      font-size: 30px;
-      text-transform: uppercase;
-      text-shadow: 0.2px 0px 1px rgba(1, 13, 35, 0.67);
-      color: #010d23;
-      letter-spacing: 1px;
-      color: #313d46;
-      text-align: center;
-      padding: 20px 0 20px 0; }
-    #contact .contact__left-section .contact__info {
-      margin: 0 auto;
-      position: relative;
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center; }
-      #contact .contact__left-section .contact__info .contact__icon {
-        color: #313d46;
-        border: 1px solid #313d46;
-        height: 35px;
-        width: 35px;
-        border-radius: 50%;
-        text-align: center;
-        font-size: 18px;
-        line-height: 35px;
-        margin: 15px auto 0 auto; }
-      #contact .contact__left-section .contact__info .contact__text {
-        margin: 0;
-        text-decoration: none; }
-      #contact .contact__left-section .contact__info .contact__mail {
-        color: #010d23; }
-    #contact .contact__left-section .contact__icons {
-      text-align: center;
-      color: #313d46;
-      margin-top: 10px; }
-      #contact .contact__left-section .contact__icons a {
-        margin: 15px 10px;
-        font-size: 28px;
-        display: inline-block;
-        transition: all 0.2s linear;
-        text-align: center;
-        color: #313d46; }
-        #contact .contact__left-section .contact__icons a:hover {
-          transform: scale(1.2);
-          cursor: pointer; }
-  #contact .contact__right-section {
+  background-position: center;
+  text-align: center; }
+  #contact .contact__title {
+    font-size: 30px;
+    text-transform: uppercase;
+    text-shadow: 0.2px 0px 1px rgba(1, 13, 35, 0.67);
+    color: #010d23;
+    letter-spacing: 1px;
+    color: #313d46;
+    padding: 20px 0 20px 0; }
+  #contact .contact__info {
+    margin: 0 auto;
+    position: relative;
     width: 50%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 30px; }
-    #contact .contact__right-section form {
-      width: 65%;
-      margin-top: 20px;
-      overflow: hidden; }
-      #contact .contact__right-section form input {
-        width: 100%;
-        background-color: transparent;
-        border: none;
-        border-bottom: 1px solid #313d46;
-        color: #313d46;
-        margin: 10px 0 20px 0;
-        padding-left: 5px; }
-      #contact .contact__right-section form textarea {
-        width: 100%;
-        height: 200px;
-        background-color: transparent;
-        color: #313d46;
-        background: linear-gradient(to bottom, rgba(49, 61, 70, 0.2), rgba(49, 61, 70, 0.2));
-        padding: 15px 0 0 5px;
-        border: none;
-        margin-top: 10px; }
-      #contact .contact__right-section form .btn__submit {
-        background-color: transparent;
-        border: 0.5px solid #fff;
-        color: #fff;
-        text-transform: uppercase;
-        margin-top: 25px;
-        height: 40px;
-        width: 140px;
-        letter-spacing: 1px;
-        font-size: 15px;
-        transition: all 0.3s linear;
-        float: right;
-        font-weight: bold; }
-      #contact .contact__right-section form .btn__submit:hover {
-        background-color: #313d46;
-        border-color: rgba(49, 61, 70, 0.6); }
-      #contact .contact__right-section form input:focus::placeholder, #contact .contact__right-section form textarea:focus::placeholder {
-        color: transparent; }
-      #contact .contact__right-section form input:focus, #contact .contact__right-section form textarea:focus {
-        outline: none; }
-      #contact .contact__right-section form input::placeholder, #contact .contact__right-section form textarea::placeholder {
-        color: #313d46;
-        font-size: 13px;
-        letter-spacing: 1px; }
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; }
+    #contact .contact__info .contact__icon {
+      color: #313d46;
+      border: 1px solid #313d46;
+      height: 35px;
+      width: 35px;
+      border-radius: 50%;
+      text-align: center;
+      font-size: 18px;
+      line-height: 35px;
+      margin: 15px auto 10px auto; }
+    #contact .contact__info .contact__text {
+      margin: 0;
+      text-decoration: none; }
+    #contact .contact__info .contact__mail {
+      color: #010d23; }
+  #contact .contact__icons {
+    color: #313d46;
+    margin: 20px 0 10px 0; }
+    #contact .contact__icons a {
+      margin: 15px 10px;
+      font-size: 28px;
+      display: inline-block;
+      transition: all 0.2s linear;
+      text-align: center;
+      color: #313d46; }
+      #contact .contact__icons a:hover {
+        transform: scale(1.2);
+        cursor: pointer; }
 
 /*
 ************************
