--- a/scss/sections/_responsive.scss
+++ b/scss/sections/_responsive.scss
@@ -55,31 +55,12 @@ $big: 1024px;
         }
     }
     
-    #contact {
-        .contact__left-section {
-            width: 100%;
-        }
-
-        .contact__right-section {
-            width: 100%;
-            
-            form {
-                width: 100%;
-                padding: 0 30px 0 30px;
-                
-                .btn__submit {
-                    margin: 0 auto;
-                }
-            }
-        }
-    }
-    
     #btn__back-top {
         right: 7px;
     }
 }
 
-// More than 320px, less than 767px 
+// More than 350px, less than 767px 
 @media all and (min-width: $small) and (max-width: $medium) {
     
     #about-me {
@@ -113,16 +94,6 @@ $big: 1024px;
                 width: 100%;
                 margin: 20px auto;
             }
-        }
-    }
-
-    #contact {
-        .contact__left-section {
-            width: 100%; 
-        }
-
-        .contact__right-section {
-            width: 100%;
         }
     }
 }
@@ -170,16 +141,6 @@ $big: 1024px;
                 margin: 10px;
                 padding: 10px
             }
-        }
-    }
-
-    #contact {
-        .contact__left-section {
-            width: 40%;
-        }
-
-        .contact__right-section {
-            width: 60%;
         }
     }
 }
@@ -253,6 +214,14 @@ $big: 1024px;
             .portfolio__item-info {
                 opacity: 1;
                 padding: 10px;
+            }
+        }
+    }
+    
+    #contact { 
+        .contact__icons {
+            a {
+                color: #fff;
             }
         }
     }
