--- a/scss/other/_z-index.scss
+++ b/scss/other/_z-index.scss
@@ -4,5 +4,6 @@ $z-index: (
     portfolio-item: 1,
     portfolio-item-info: 2,
     portfolio-item-exc: 6,
-    portfolio-item-exc-txt: 5
+    portfolio-item-exc-txt: 5,
+    btn-back-top: 20
 )
