--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -48,6 +48,11 @@ Section "Contact"
             margin: 0;
             text-decoration: none;
         }
+        
+        a[href^="tel"]{
+            color:inherit;
+            text-decoration:none;
+        }
 
         .contact__mail {
             color: $main-color;
