--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -15,6 +15,7 @@ header {
     position: relative;
     @include box--shadow;
     z-index: map-get($z-index, header);
+    overflow: hidden;
 
     
     #header__title {
@@ -37,13 +38,60 @@ header {
         }
         
         .title--intro {
-//            animation-name: cd-bounce-right;
-            animation-duration: 1.5s;
+            -webkit-animation: bounce-right 1.5s;
+            -moz-animation:    bounce-right 1.5s;
+            -o-animation:      bounce-right 1.5s;
+            animation:         bounce-right 1.5s;
             text-transform: uppercase;
             text-shadow: 0.5px 0.5px 14px #212024;
         }
-
-        @keyframes cd-bounce-right {
+        
+        @-webkit-keyframes bounce-right {
+            0% {
+                opacity: .2;
+                transform: translateX(-200px);
+            }
+            60% {
+                opacity: .7;
+                transform: translateX(15px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+        
+        @-moz-keyframes bounce-right {
+            0% {
+                opacity: .2;
+                transform: translateX(-200px);
+            }
+            60% {
+                opacity: .7;
+                transform: translateX(15px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+        
+        @-o-keyframes bounce-right {
+            0% {
+                opacity: .2;
+                transform: translateX(-200px);
+            }
+            60% {
+                opacity: .7;
+                transform: translateX(15px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+        
+        @keyframes bounce-right {
             0% {
                 opacity: .2;
                 transform: translateX(-200px);
@@ -71,7 +119,55 @@ header {
         }
         
         .btn--intro {
-            animation: btn-opacity 1.5s;
+            -webkit-animation: btn-opacity 1.5s;
+            -moz-animation:    btn-opacity 1.5s;
+            -o-animation:      btn-opacity 1.5s;
+            animation:         btn-opacity 1.5s;
+        }
+        
+        @-webkit-keyframes btn-opacity {
+            0% {
+                opacity: 0;
+            }
+            60% {
+                opacity: .5;
+            }
+            80% {
+                opacity: .7;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+        
+        @-moz-keyframes btn-opacity {
+            0% {
+                opacity: 0;
+            }
+            60% {
+                opacity: .5;
+            }
+            80% {
+                opacity: .7;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+        
+        @-o-keyframes btn-opacity {
+            0% {
+                opacity: 0;
+            }
+            60% {
+                opacity: .5;
+            }
+            80% {
+                opacity: .7;
+            }
+            100% {
+                opacity: 1;
+            }
         }
 
         @keyframes btn-opacity {
@@ -111,7 +207,37 @@ header {
         }
         
         .arrow--animation {
-            animation: arrow-up 1.5s;
+            -webkit-animation: arrow-up 1.5s;
+            -moz-animation:    arrow-up 1.5s;
+            -o-animation:      arrow-up 1.5s;
+            animation:         arrow-up 1.5s;
+        }
+        
+        @-webkit-keyframes arrow-up {
+            0% {
+                transform: translateY(100px);
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+        
+        @-moz-keyframes arrow-up {
+            0% {
+                transform: translateY(100px);
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+        
+        @-o-keyframes arrow-up {
+            0% {
+                transform: translateY(100px);
+            }
+            100% {
+                transform: translateY(0);
+            }
         }
         
         @keyframes arrow-up {
